# website

./: .gitignore  Cargo.toml  README.md  _output_treesize.txt  config.toml  new-draft.sh  new-howto.sh  new-post.sh  undraft.sh  upload.sh
ci/: azure-build.yml  azure-ci-cd.yml  azure-deploy.yml  azure-prep.yml  azure-summarize.yml
content/: dissertation.md
content/2008/: things-to-read.md
content/2009/: aas-213-poster.md  aas-214-poster.md
content/2010/: qual-feasibility-conclusions.md  qual-previous-work.md  qual-reference-radio-transient-surveys.md  qual-reference-transient-rate-measurements.md  qual-scientific-merit.md  scintillation-notes.md
content/2011/: one-piece-of-the-puzzle-w-projection.md
content/2012/: a-short-bibliography-of-structure-functions.md  barycentric-julian-dates-in-python.md  imaging-algorithms-vs-perfect-data.md
content/2013/: bayesian-blocks-analysis-in-python.md  preprint-4539.md
content/2014/: announcing-worklog-tools-for-automating-tedious-cv-activities.md  extreme-magnetic-activity-in-nltt-33370-ab.md  the-bandpass-of-the-mearth-observatory.md
content/2015/: the-first-millimeter-detection-of-a-non-accreting-ultracool-dwarf.md  the-rotation-period-and-magnetic-field-of-the-t-dwarf-2massi-j1047539212423.md
content/2023/: _index.md  (+7 more)
drafts/: brown-dwarf-windspeeds.md  dasch-website-sneak-peek.md
sass/: style.scss
src/: app.rs  apply.rs  commit.rs  env.rs  errors.rs  github.rs  logger.rs  main.rs  repository.rs  size_report.rs
templates/: base.html  cvfrag.html  howto.html  index.html  page.html  pubsfrag.html
(+77 files in other folders)
