[package]
name = "deploytool"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
edition = "2021"
license = "MIT"
description = "Support tool for deploying my personal website"
repository = "https://github.com/pkgw/website"
readme = "README.md"

[dependencies]
anyhow = "^1"
atomicwrites = "^0.4"
base64 = "^0.21"
chrono = "^0.4"
ci_info = "^0.14"
clap = { version = "^4.5", features = ["derive"] }
configparser = "^1.0"
dirs = "^3"
git-url-parse = "^0.4"
git2 = "^0.18"
lazy_static = "^1.4"
log = "^0.4"
lru = "^0.12"
rand = "^0.8"
reqwest = { version = "^0.11", features = ["blocking"] }
semver = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0"

[features]
vendored-openssl = ["git2/vendored-openssl"]
